--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,10 @@ $RECYCLE.BIN/
 /coding-exercises/placeholder/.idea/
 /.idea/
 /coding-exercises/Exercise5/rosling-start.zip
+/coding-exercises/Exercise7/line-exercise.zip
+/projects/placeholder/Untitled/planets.csv
+/projects/placeholder/Untitled/UCS_Satellite_Database_7-1-16.xls
+/coding-exercises/Exercise7/line-1-start/
+/coding-exercises/Exercise7/line-1-start/index.html
+/coding-exercises/Exercise7/line-1-start/script.js
+/coding-exercises/Exercise7/line-1-start/style.css
